--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -9,7 +9,7 @@
     
     <span class="snowman"></span>
     
-    <span class="snow-layer"></span>
+    <span class="snow-layer">eeee</span>
     
     </body>
 
